--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,10 +4,11 @@ spring:
       on-profile: ["local", "dev"]
 
   datasource:
-    url: jdbc:mysql://localhost:3306/challenge
-    driverClassName: com.mysql.cj.jdbc.Driver
-    username: root
-    password: 1029
+    url: ${SPRING_DATASOURCE_URL}
+    username: ${SPRING_DATASOURCE_USERNAME}
+    password: ${SPRING_DATASOURCE_PASSWORD}
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
 
   jpa:
     database-platform: org.hibernate.dialect.MySQL8Dialect
