--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -34,6 +34,7 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
+          distribution: 'adopt'  # 배포 설정 추가
           java-version: '17'
 
       - name: Build with Gradle
