--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -1,4 +1,3 @@
-
 name: AWS ECR push & deploy k8s
 
 on:
@@ -7,14 +6,13 @@ on:
     branches:
       - main
 
-
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
     env:
       ECR_REGISTRY: 891377021190.dkr.ecr.ap-northeast-2.amazonaws.com
-      ECR_REPOSITORY: main-api
+      API_REPOSITORY: main-api
       DB_REPOSITORY: main-db
       IMAGE_TAG: latest
       AWS_REGION: ap-northeast-2
@@ -34,37 +32,36 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
-          distribution: 'adopt'  # 배포 설정 추가
+          distribution: 'adopt'
           java-version: '17'
 
-      - name: Build with Gradle
-        run: ./gradlew clean build
+      - name: Build API Docker image
+        run: docker build --file Dockerfile-api --platform linux/amd64 -t ${DOCKER_HUB_USERNAME}/dlb-main:latest .
 
-      - name: Log in to Docker Hub
-        run: echo "${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin
-
-      - name: Build and push API Docker image to Amazon ECR
+      - name: Push API Docker image to Docker Hub
         run: |
-          docker buildx create --use
-          docker buildx build --file Dockerfile-api --platform linux/amd64 -t ${ECR_REGISTRY}/${API_REPOSITORY}:${IMAGE_TAG} --push .
+          echo "${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin
+          docker push ${DOCKER_HUB_USERNAME}/dlb-main:latest
 
-      - name: Build and push DB Docker image to Amazon ECR
+      - name: Tag and Push API Docker image to Amazon ECR
         run: |
-          docker buildx create --use
-          docker buildx build --file Dockerfile-db --platform linux/amd64 -t ${ECR_REGISTRY}/${DB_REPOSITORY}:${IMAGE_TAG} --push .
-
-      - name: Log in to Amazon ECR
-        run: |
-          aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws configure set region ${{ env.AWS_REGION }}
+          docker tag ${DOCKER_HUB_USERNAME}/dlb-main:latest ${ECR_REGISTRY}/${API_REPOSITORY}:${IMAGE_TAG}
           aws ecr get-login-password --region ${{ env.AWS_REGION }} | docker login --username AWS --password-stdin ${{ env.ECR_REGISTRY }}
+          docker push ${ECR_REGISTRY}/${API_REPOSITORY}:${IMAGE_TAG}
 
-      - name: Pull Docker image from Docker Hub and push to Amazon ECR
+      - name: Build DB Docker image
+        run: docker build --file Dockerfile-db --platform linux/amd64 -t ${DOCKER_HUB_USERNAME}/dlb-main-db:latest .
+
+      - name: Push DB Docker image to Docker Hub
         run: |
-          docker pull ${DOCKER_HUB_USERNAME}/dlb-main:${IMAGE_TAG}
-          docker tag ${DOCKER_HUB_USERNAME}/dlb-main:${IMAGE_TAG} ${ECR_REGISTRY}/${ECR_REPOSITORY}:${IMAGE_TAG}
-          docker push ${ECR_REGISTRY}/${ECR_REPOSITORY}:${IMAGE_TAG}
+          echo "${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin
+          docker push ${DOCKER_HUB_USERNAME}/dlb-main-db:latest
+
+      - name: Tag and Push DB Docker image to Amazon ECR
+        run: |
+          docker tag ${DOCKER_HUB_USERNAME}/dlb-main-db:latest ${ECR_REGISTRY}/${DB_REPOSITORY}:${IMAGE_TAG}
+          aws ecr get-login-password --region ${{ env.AWS_REGION }} | docker login --username AWS --password-stdin ${{ env.ECR_REGISTRY }}
+          docker push ${ECR_REGISTRY}/${DB_REPOSITORY}:${IMAGE_TAG}
 
       - name: Configure kubectl
         run: |
@@ -83,5 +80,4 @@ jobs:
       - name: Update Kubernetes deployment
         run: |
           kubectl apply -f k8s/main-api-deployment.yaml
-          kubectl apply -f k8s/main-db-deployment.yaml
-
+          kubectl apply -f k8s/mysql-deployment.yaml
