--- a/Dockerfile-api
+++ b/Dockerfile-api
@@ -9,8 +9,7 @@ EXPOSE 8080
 ARG JAR_FILE=build/libs/main-0.0.1-SNAPSHOT.jar
 
 # Add the application's JAR file to the container
-#ADD ${JAR_FILE} dlb-user-0.0.1-SNAPSHOT.jar
-COPY ${JAR_FILE} main-0.0.1-SNAPSHOT.jar
+COPY ${JAR_FILE} main.jar
 
 # Run the JAR file
 ENTRYPOINT ["java","-jar","/main.jar"]
