--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,28 @@
 version: '3.8'
 
 services:
-  # Spring Boot service
-  app:
-    image: sodasu/dlb-user
+  db:
+    image: sodasu/dlb-main-db:latest
+    container_name: mysql_container
+    environment:
+      MYSQL_ROOT_PASSWORD: rootpassword
+      MYSQL_DATABASE: mydatabase
+      MYSQL_USER: myuser
+      MYSQL_PASSWORD: mypassword
     ports:
-      - "8080:8080"
+      - "3306:3306"
+
+  app:
+    image: sodasu/dlb-main:latest
+    container_name: spring_boot_app
     environment:
       SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/mydatabase
-      SPRING_DATASOURCE_USERNAME: root
-      SPRING_DATASOURCE_PASSWORD: password
+      SPRING_DATASOURCE_USERNAME: myuser
+      SPRING_DATASOURCE_PASSWORD: mypassword
+    ports:
+      - "8080:8080"
     depends_on:
       - db
 
-  # MySQL service
-  db:
-    image: sodasu/dlb-user-db
-    ports:
-      - "3306:3306"
-    environment:
-      MYSQL_ROOT_PASSWORD: password
-      MYSQL_DATABASE: mydatabase
+
 
