--- a/Dockerfile-api
+++ b/Dockerfile-api
@@ -11,5 +11,8 @@ ARG JAR_FILE=build/libs/main-0.0.1-SNAPSHOT.jar
 # Add the application's JAR file to the container
 COPY ${JAR_FILE} main.jar
 
+# Environment variable for the Spring profile
+ENV SPRING_PROFILES_ACTIVE=dev
+
 # Run the JAR file
 ENTRYPOINT ["java","-jar","/main.jar"]
