--- a/k8s/main-api-deployment.yaml
+++ b/k8s/main-api-deployment.yaml
@@ -39,7 +39,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: main-api-service
+  name: main-api-deployment
   namespace: main-namespace
 spec:
   type: LoadBalancer
