--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -47,41 +47,40 @@ jobs:
           echo "${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin
           docker push ${DOCKER_HUB_USERNAME}/dlb-main:latest
 
-      - name: Tag and Push API Docker image to Amazon ECR
-        run: |
-          docker tag ${DOCKER_HUB_USERNAME}/dlb-main:latest ${ECR_REGISTRY}/${API_REPOSITORY}:${IMAGE_TAG}
-          aws ecr get-login-password --region ${{ env.AWS_REGION }} | docker login --username AWS --password-stdin ${{ env.ECR_REGISTRY }}
-          docker push ${ECR_REGISTRY}/${API_REPOSITORY}:${IMAGE_TAG}
+#      - name: Tag and Push API Docker image to Amazon ECR
+#        run: |
+#          docker tag ${DOCKER_HUB_USERNAME}/dlb-main:latest ${ECR_REGISTRY}/${API_REPOSITORY}:${IMAGE_TAG}
+#          aws ecr get-login-password --region ${{ env.AWS_REGION }} | docker login --username AWS --password-stdin ${{ env.ECR_REGISTRY }}
+#          docker push ${ECR_REGISTRY}/${API_REPOSITORY}:${IMAGE_TAG}
 
-      - name: Build DB Docker image
-        run: docker build --file Dockerfile-db --platform linux/amd64 -t ${DOCKER_HUB_USERNAME}/dlb-main-db:latest .
-
-      - name: Push DB Docker image to Docker Hub
-        run: |
-          echo "${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin
-          docker push ${DOCKER_HUB_USERNAME}/dlb-main-db:latest
-
-      - name: Tag and Push DB Docker image to Amazon ECR
-        run: |
-          docker tag ${DOCKER_HUB_USERNAME}/dlb-main-db:latest ${ECR_REGISTRY}/${DB_REPOSITORY}:${IMAGE_TAG}
-          aws ecr get-login-password --region ${{ env.AWS_REGION }} | docker login --username AWS --password-stdin ${{ env.ECR_REGISTRY }}
-          docker push ${ECR_REGISTRY}/${DB_REPOSITORY}:${IMAGE_TAG}
+#      - name: Build DB Docker image
+#        run: docker build --file Dockerfile-db --platform linux/amd64 -t ${DOCKER_HUB_USERNAME}/dlb-main-db:latest .
+#
+#      - name: Push DB Docker image to Docker Hub
+#        run: |
+#          echo "${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin
+#          docker push ${DOCKER_HUB_USERNAME}/dlb-main-db:latest
+#
+#      - name: Tag and Push DB Docker image to Amazon ECR
+#        run: |
+#          docker tag ${DOCKER_HUB_USERNAME}/dlb-main-db:latest ${ECR_REGISTRY}/${DB_REPOSITORY}:${IMAGE_TAG}
+#          aws ecr get-login-password --region ${{ env.AWS_REGION }} | docker login --username AWS --password-stdin ${{ env.ECR_REGISTRY }}
+#          docker push ${ECR_REGISTRY}/${DB_REPOSITORY}:${IMAGE_TAG}
 
       - name: Configure kubectl
         run: |
           aws eks update-kubeconfig --region ${{ env.AWS_REGION }} --name DlbEks
 
-      - name: Create Kubernetes Secret
-        run: |
-          kubectl create secret generic mysql-secret \
-            --from-literal=MYSQL_ROOT_PASSWORD=${{ secrets.MYSQL_ROOT_PASSWORD }} \
-            --from-literal=MYSQL_DATABASE=${{ secrets.MYSQL_DATABASE }} \
-            --from-literal=MYSQL_USER=${{ secrets.MYSQL_USER }} \
-            --from-literal=MYSQL_PASSWORD=${{ secrets.MYSQL_PASSWORD }} \
-            --namespace main-namespace \
-            --dry-run=client -o yaml | kubectl apply --validate=false -f -
+#      - name: Create Kubernetes Secret
+#        run: |
+#          kubectl create secret generic mysql-secret \
+#            --from-literal=MYSQL_ROOT_PASSWORD=${{ secrets.MYSQL_ROOT_PASSWORD }} \
+#            --from-literal=MYSQL_DATABASE=${{ secrets.MYSQL_DATABASE }} \
+#            --from-literal=MYSQL_USER=${{ secrets.MYSQL_USER }} \
+#            --from-literal=MYSQL_PASSWORD=${{ secrets.MYSQL_PASSWORD }} \
+#            --namespace main-namespace \
+#            --dry-run=client -o yaml | kubectl apply --validate=false -f -
 
       - name: Update Kubernetes deployment
         run: |
           kubectl apply -f k8s/main-api-deployment.yaml
-          kubectl apply -f k8s/main-db-deployment.yaml
